<resources>
    <string name="app_name">SH Portal</string>

    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="start">Start</string>

<!--Welcome screen-->
    <string name="title_activity_welcome">Home Screen</string>
    <string name="slide_1_title">Exclusive Products</string>
    <string name="slide_1_desc">Get products which are unique and only available at our shops !</string>
    <string name="slide_2_title">Cheap Rates</string>
    <string name="slide_2_desc">Products at such an affordable rates !</string>
    <string name="slide_3_title">Hassle Free Payments</string>
    <string name="slide_3_desc">With various pay options , you can easily pay in a minute !</string>
    <string name="slide_4_title">Fast Delivery</string>
    <string name="slide_4_desc">Blazing fast order delivery within time !</string>

<!--    Authentication-->
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">SH Portal</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered now!</string>
    <string name="btn_link_to_login">Already registered. Log me in!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>

    <!-- Dashboard-->
    <string name="content_main_content1">Content1</string>
    <string name="content_main_content2">Content2</string>
    <string name="content_main_content3">Content3</string>
    <string name="content_main_content4">Content4</string>
    <string name="content_main_contact">Contact</string>
    <string name="content_main_social">Social</string>
</resources>
